pushed faking sve

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family:'Times New Roman';
-    background-color: #fff6ea;
+    background-color: rgb(247, 236, 225);
 }
 a.squiffy-link
 {
