--- a/welcome.css
+++ b/welcome.css
@@ -1,9 +1,22 @@
+footer {
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+  }
+
 * {
     line-height: 1.6;
-    font-family:'Arial';
     box-sizing: border-box;
-
+    font-family:'Times New Roman';
 }
+
+body {
+    background-color: rgb(247, 236, 225);
+}
+
 
 h1{
     text-align: center;
@@ -13,10 +26,27 @@ h1{
 }
 
 .uinput, .welcome{
-    text-align: justify;
     margin-right: 20%;
     margin-left: 20%;
 }
+
+.welcome {
+    text-align: justify;
+}
+
+.childbtn {
+    margin-left: 2%;
+}
+
+.uinput {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.child {
+    flex: 1 1 100px;
+  }
 
 .btn{
     width: 100px;
@@ -41,6 +71,7 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: left;
 }
 
 .newgame {
