--- a/welcome.css
+++ b/welcome.css
@@ -1,60 +1,14 @@
-footer {
-    text-align: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-  }
-
 * {
-    line-height: 1.6;
-    box-sizing: border-box;
-    font-family:'Times New Roman';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-body {
-    background-color: rgb(232, 223, 230);
-}
-
-
-h1{
-    text-align: center;
-    margin-top: 2cm;
-    padding-bottom: 1cm;
-    font-size: 35pt;
-}
-
-.uinput, .welcome{
-    margin-right: 20%;
-    margin-left: 20%;
-}
-
-.welcome {
-    text-align: justify;
-}
-
-.childbtn {
-    margin-left: 2%;
-}
-
-.uinput {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-.child {
-    flex: 1 1 100px;
-  }
 
 .btn{
     width: 100px;
     clear: both;
     margin: auto;
-    background-color:#5f172c;;
+    background-color: rgb(232, 223, 230);
+    color: rgb(54, 54, 54);
     border-color: white;
-    color: white;
 }
 
 .btn-group-lg>.btn, .btn-lg {
@@ -90,6 +44,7 @@ h2 {
     display: grid;
     place-items: center;
     border-radius: 1rem;
-    background-color: rgb(214, 201, 211);
+    color: white;
+    background-color: rgb(54, 54, 54);
     position: relative;
   }
